# Quest27

./: CMakeLists.txt  CMakePresets.json
task1_geometry/: CMakeLists.txt  main.cpp
task1_geometry/include/: Circle.h  Figure.h  Rectangle.h  Square.h  Triangle.h
task1_geometry/src/: Circle.cpp  Rectangle.cpp  Square.cpp  Triangle.cpp
task28_1_swimming/: CMakeLists.txt  main.cpp
task28_2_station/: CMakeLists.txt  main.cpp
task28_3_kitchen/: main.cpp
task29_1_superdog/: CMakeLists.txt  Counting.h  Dancing.h  Dog.cpp  Dog.h  Swimming.h  Talent.h  main.cpp
task29_2_shape/: Circle.h  Rectangle.h  Shape.h  Triangle.h  main.cpp
task2_company/: CMakeLists.txt  main.cpp
task2_company/include/: Boss.h  Employee.h  Manager.h  Team.h  Worker.h
task2_company/src/: Boss.cpp  Manager.cpp  Team.cpp  Worker.cpp
task30_1_requests/: CMakeLists.txt  main.cpp
task30_2_html/: CMakeLists.txt  main.cpp
task30_3_arguments/: CMakeLists.txt  main.cpp
task3_elves/: CMakeLists.txt  main.cpp
task3_elves/include/: Branch.h
task3_elves/src/: Branch.cpp
